--- a/index.html
+++ b/index.html
@@ -400,18 +400,52 @@ th, td { z-index: 2; }
             background: linear-gradient(90deg, var(--color-exito) 60%, #27ae60 100%);
             color: white;
             border: none;
-            padding: 12px 28px;
+            padding: 12px 32px;
             border-radius: 10px;
-            margin-bottom: 14px;
-            font-size: 1.08em;
-            font-weight: 600;
+            font-size: 1.18em;
+            font-weight: 700;
             box-shadow: 0 4px 16px rgba(39,174,96,0.13);
+            margin-bottom: 0;
+            margin-left: 8px;
             transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+            opacity: 0.96;
+            position: relative;
+            overflow: hidden;
+            animation: fadeInBtnDia 0.7s cubic-bezier(.77,0,.18,1);
+            letter-spacing: 0.5px;
+        }
+        .btn-agregar-dia:after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255,255,255,0.18);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: width 0.3s cubic-bezier(.77,0,.18,1), height 0.3s cubic-bezier(.77,0,.18,1);
+            z-index: 1;
+        }
+        .btn-agregar-dia:hover:after {
+            width: 180%;
+            height: 180%;
         }
         .btn-agregar-dia:hover {
             background: linear-gradient(90deg, #27ae60 0%, var(--color-exito) 100%);
-            transform: scale(1.07);
-            box-shadow: 0 8px 32px rgba(39,174,96,0.18);
+            transform: scale(1.05);
+            box-shadow: 0 6px 18px rgba(39,174,96,0.18);
+            opacity: 1;
+        }
+        body.dark-mode .btn-agregar-dia {
+            background: linear-gradient(90deg, #66bb6a 60%, #43a047 100%);
+            color: #fff;
+            box-shadow: 0 2px 8px rgba(102,187,106,0.13);
+        }
+        @keyframes fadeInBtnDia {
+            0% { opacity: 0; transform: translateY(-12px) scale(0.95); }
+            60% { opacity: 0.7; transform: translateY(2px) scale(1.03); }
+            100% { opacity: 1; transform: translateY(0) scale(1); }
         }
         .btn-agregar-est {
             background: linear-gradient(90deg, var(--color-primario) 60%, #3498db 100%);
@@ -711,6 +745,8 @@ function agregarEstudiante() {
     // Si no hay estudiantes, agregar una fila vacía y mostrar % asistencia y Acciones
     if (!estudiantes || estudiantes.length === 0) {
         let html = `<div class="version-mensaje" style="margin-bottom:10px;font-size:1.08em;color:var(--color-primario);font-weight:500;">🗓️ Sistema de registro de asistencia <span style="color:var(--color-error);font-weight:bold;">v${VERSION}</span></div>`;
+        html += `<div style="width:100%;display:flex;justify-content:flex-end;margin:0 0 12px 0;">
+        </div>`;
         html += `<table border="1" aria-label="Tabla de asistencia" style="border-collapse:collapse;background:var(--color-table-bg);">`;
         html += '<thead>';
         html += '<tr>' +
@@ -720,8 +756,16 @@ function agregarEstudiante() {
             '<th rowspan="2">Primer apellido</th>' +
             '<th rowspan="2">Segundo apellido</th>';
         for (let d = 0; d < dias.length; d++) {
-            html += `<th><input type="date" value="${dias[d].fecha}" style="width:110px;" aria-label="Fecha del día ${d+1}"><br><span style="font-size:12px;">${dias[d].nombre}</span><br><input type="number" min="0" value="${dias[d].lecciones}" style="width:70px;margin-top:4px;" placeholder="Lecciones" aria-label="Lecciones día ${d+1}"></th>`;
+            html += `<th><input type="date" value="${dias[d].fecha}" style="width:110px;" aria-label="Fecha del día ${d+1}"><br><span style="font-size:12px;">${dias[d].nombre}</span><br><div style='display:flex;align-items:center;gap:6px;margin-top:4px;'><span style='font-size:11px;color:#888;background:#f4f7fb;padding:2px 8px;border-radius:6px;'>Lecciones</span><input type="number" min="0" value="${dias[d].lecciones}" style="width:70px;" placeholder="Lecciones" aria-label="Lecciones día ${d+1}"></div></th>`;
         }
+        html += '<th rowspan="2">% Asistencia</th>';
+        html += '<th rowspan="2">Acciones</th>';
+        html += '</tr></thead>';
+        // Botón '+ Día' fuera del recuadro de días, debajo de los encabezados
+        html += `<tr><td colspan="${5 + dias.length + 2}" style="background:none;border:none;padding:0;">
+            <div style="width:100%;display:flex;justify-content:flex-end;margin:8px 0 18px 0;">
+            </div>
+        </td></tr>`;
         html += '<th rowspan="2">% Asistencia</th>';
         html += '<th rowspan="2">Acciones</th>';
         html += '</tr></thead><tbody>';
@@ -754,66 +798,62 @@ function agregarEstudiante() {
         return;
     }
 let html = `<div class="version-mensaje" style="margin-bottom:10px;font-size:1.08em;color:var(--color-primario);font-weight:500;">🗓️ Sistema de registro de asistencia <span style="color:var(--color-error);font-weight:bold;">v${VERSION}</span></div>`;
-// Campo editable para llenar si el % asistencia es menor a 10 y (10 - % asistencia) >= valorExtra
-if (typeof window.valorExtra === 'undefined') window.valorExtra = localStorage.getItem('valorExtra') ? parseFloat(localStorage.getItem('valorExtra')) : 2;
-let mostrarCampoExtra = false;
-for (let i = 0; i < estudiantes.length; i++) {
-    let estudiante = estudiantes[i];
-    let totalAusente = 0, totalTarde = 0, totalEscapada = 0;
-    if (!estudiante.asistenciaDias || estudiante.asistenciaDias.length !== dias.length) continue;
-    for (let d = 0; d < dias.length; d++) {
-        let dia = estudiante.asistenciaDias[d];
-        if (typeof dia === 'object') {
-            if (dia.tipo === 'Ausente') totalAusente += Number(dia.cantidad || 0);
-            if (dia.tipo === 'Tardía') totalTarde += Number(dia.cantidad || 0);
-            if (dia.tipo === 'Escapada') totalEscapada += Number(dia.cantidad || 0);
+        // Campo editable para llenar si el % asistencia es menor a 10 y (10 - % asistencia) >= valorExtra
+        if (typeof window.valorExtra === 'undefined') window.valorExtra = localStorage.getItem('valorExtra') ? parseFloat(localStorage.getItem('valorExtra')) : 2;
+        let mostrarCampoExtra = false;
+        for (let i = 0; i < estudiantes.length; i++) {
+            let estudiante = estudiantes[i];
+            let totalAusente = 0, totalTarde = 0, totalEscapada = 0;
+            if (!estudiante.asistenciaDias || estudiante.asistenciaDias.length !== dias.length) continue;
+            for (let d = 0; d < dias.length; d++) {
+                let dia = estudiante.asistenciaDias[d];
+                if (typeof dia === 'object') {
+                    if (dia.tipo === 'Ausente') totalAusente += Number(dia.cantidad || 0);
+                    if (dia.tipo === 'Tardía') totalTarde += Number(dia.cantidad || 0);
+                    if (dia.tipo === 'Escapada') totalEscapada += Number(dia.cantidad || 0);
+                }
+            }
+            let totalAusencias = totalAusente + (totalTarde * 0.5) + totalEscapada;
+            let totalLecciones = dias.reduce((acc, dia) => acc + (Number(dia.lecciones) || 0), 0);
+            let porcentajeAsistencia = 0;
+            if (totalLecciones > 0) {
+                let porcentajeAusencia = (totalAusencias / totalLecciones) * 100;
+                porcentajeAusencia = Math.round(porcentajeAusencia * 100) / 100;
+                if (porcentajeAusencia > 100) porcentajeAsistencia = 0;
+                if (porcentajeAusencia < 1) porcentajeAsistencia = 10;
+                else if (porcentajeAusencia < 10) porcentajeAsistencia = 9;
+                else if (porcentajeAusencia < 20) porcentajeAsistencia = 8;
+                else if (porcentajeAusencia < 30) porcentajeAsistencia = 7;
+                else if (porcentajeAusencia < 40) porcentajeAsistencia = 6;
+                else if (porcentajeAusencia < 50) porcentajeAsistencia = 5;
+                else if (porcentajeAusencia < 60) porcentajeAsistencia = 4;
+                else if (porcentajeAusencia < 70) porcentajeAsistencia = 3;
+                else if (porcentajeAusencia < 80) porcentajeAsistencia = 2;
+                else if (porcentajeAusencia < 90) porcentajeAsistencia = 1;
+                else porcentajeAsistencia = 0;
+            }
+            if (porcentajeAsistencia < 10 && (10 - porcentajeAsistencia) >= window.valorExtra) {
+                mostrarCampoExtra = true;
+                break;
+            }
         }
-    }
-    let totalAusencias = totalAusente + (totalTarde * 0.5) + totalEscapada;
-    let totalLecciones = dias.reduce((acc, dia) => acc + (Number(dia.lecciones) || 0), 0);
-    let porcentajeAsistencia = 0;
-    if (totalLecciones > 0) {
-        let porcentajeAusencia = (totalAusencias / totalLecciones) * 100;
-        porcentajeAusencia = Math.round(porcentajeAusencia * 100) / 100;
-        if (porcentajeAusencia > 100) porcentajeAsistencia = 0;
-        if (porcentajeAusencia < 1) porcentajeAsistencia = 10;
-        else if (porcentajeAusencia < 10) porcentajeAsistencia = 9;
-        else if (porcentajeAusencia < 20) porcentajeAsistencia = 8;
-        else if (porcentajeAusencia < 30) porcentajeAsistencia = 7;
-        else if (porcentajeAusencia < 40) porcentajeAsistencia = 6;
-        else if (porcentajeAusencia < 50) porcentajeAsistencia = 5;
-        else if (porcentajeAusencia < 60) porcentajeAsistencia = 4;
-        else if (porcentajeAusencia < 70) porcentajeAsistencia = 3;
-        else if (porcentajeAusencia < 80) porcentajeAsistencia = 2;
-        else if (porcentajeAusencia < 90) porcentajeAsistencia = 1;
-        else porcentajeAsistencia = 0;
-    }
-    if (porcentajeAsistencia < 10 && (10 - porcentajeAsistencia) >= window.valorExtra) {
-        mostrarCampoExtra = true;
-        break;
-    }
-}
-if (mostrarCampoExtra) {
-    html += `<div style="margin-bottom:12px;padding:8px 14px;background:#ffeaea;border-radius:8px;max-width:320px;">
+        if (mostrarCampoExtra) {
+            html += `<div style="margin-bottom:12px;padding:8px 14px;background:#ffeaea;border-radius:8px;max-width:320px;">
         <label for="inputValorExtra" style="color:#e74c3c;font-weight:bold;">% Para alerta temprana por ausentismo (%):</label>
         <input type="number" id="inputValorExtra" min="0" max="10" step="1" value="${Math.round(window.valorExtra)}" style="width:70px;margin-left:8px;font-weight:bold;color:#222;background:#fff;border:2px solid #e74c3c;border-radius:6px;" onchange="window.valorExtra=parseInt(this.value)||0;localStorage.setItem('valorExtra',window.valorExtra)">
     </div>`;
-}
-html += `<button onclick="agregarDia()" class="btn-agregar-dia" title="Agregar nuevo día de asistencia" aria-label="Agregar día">
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="4"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
-    Agregar día
-</button>`;
-// ...eliminada tabla de conversión visual...
-html += `<table border="1" aria-label="Tabla de asistencia" style="border-collapse:collapse;background:var(--color-table-bg);">`;
-html += '<thead>';
-// Fila de encabezados principal
-html += '<tr>' +
-    '<th rowspan="2">#</th>' +
-    '<th rowspan="2" class="cedula">Cédula</th>' +
-    '<th rowspan="2" class="nombre">Nombre</th>' +
-    '<th rowspan="2" class="apellido1">Primer apellido</th>' +
-    '<th rowspan="2" class="apellido2">Segundo apellido</th>' +
-   `<th colspan="${dias.length}"><span style="font-size:1em;font-weight:600;color:var(--color-primario);"><svg style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="var(--color-primario)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="4"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>Asistencia por día</span></th>` +
+        }
+        // ...eliminada tabla de conversión visual...
+        html += `<table border="1" aria-label="Tabla de asistencia" style="border-collapse:collapse;background:var(--color-table-bg);">`;
+        html += '<thead>';
+        // Fila de encabezados principal
+        html += '<tr>' +
+            '<th rowspan="2">#</th>' +
+            '<th rowspan="2" class="cedula">Cédula</th>' +
+            '<th rowspan="2" class="nombre">Nombre</th>' +
+            '<th rowspan="2" class="apellido1">Primer apellido</th>' +
+            '<th rowspan="2" class="apellido2">Segundo apellido</th>' +
+           `<th colspan="${dias.length}"><span style="font-size:1em;font-weight:600;color:var(--color-primario);"><svg style="vertical-align:middle;margin-right:4px;" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="var(--color-primario)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="4"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>Asistencia por día</span></th>` +
    '<th rowspan="2" class="th-resumen">Ausencias</th>' +
    '<th rowspan="2" class="th-resumen">Justificadas</th>' +
    '<th rowspan="2" class="th-resumen">Presentes</th>' +
@@ -831,16 +871,29 @@ html += '<tr>' +
                 let dia = estudiantes[i].asistenciaDias[d];
                 if (typeof dia === 'object' && dia.tipo === 'Ausente' && dia.cantidad > 0) ausentesDia++;
             }
-            html += `<th><input type="date" value="${dias[d].fecha}" onchange="actualizarFechaDia(${d}, this.value)" style="width:110px;" aria-label="Fecha del día ${d+1}">`;
-            html += `<br><span style="font-size:12px;">${dias[d].nombre}</span>`;
-            html += `<br><input type="number" min="0" value="${dias[d].lecciones}" style="width:70px;margin-top:4px;" onchange="actualizarLeccionesDia(${d}, this.value)" placeholder="Lecciones" aria-label="Lecciones día ${d+1}">`;
+            html += `<th>
+                <div style="display:flex;flex-direction:column;align-items:flex-end;gap:6px;">
+                    <input type="date" value="${dias[d].fecha}" onchange="actualizarFechaDia(${d}, this.value)" style="width:110px;align-self:flex-start;" aria-label="Fecha del día ${d+1}">
+                    <div style="width:100%;display:flex;align-items:center;justify-content:space-between;">
+                        <span style="font-size:12px;">${dias[d].nombre}</span>
+                        ${d === dias.length - 1 ? `<button onclick=\"agregarDia()\" class=\"btn-agregar-dia\" style=\"padding:6px 18px;font-size:1em;border-radius:8px;background:linear-gradient(90deg,#43a047 60%,#27ae60 100%);color:#fff;border:none;box-shadow:0 2px 8px rgba(67,160,71,0.13);font-weight:600;line-height:1;min-width:54px;max-width:90px;margin-left:8px;display:inline-block;\" title=\"Agregar día\">+ Día</button>` : ''}
+                    </div>
+                </div>
+            `;
+            html += `<br><div style='display:flex;align-items:center;gap:8px;margin-top:6px;'>
+                <span style='font-size:12px;color:var(--color-primario);background:linear-gradient(90deg,#e3e9f7 0%,#fff 100%);padding:3px 12px;border-radius:8px;border:1.5px solid var(--color-primario);font-weight:600;box-shadow:0 2px 8px rgba(25,118,210,0.08);transition:background 0.18s;'>Lecciones</span>
+                <input type="number" min="0" value="${dias[d].lecciones}" style="width:70px;padding:7px 8px;border-radius:8px;border:1.5px solid var(--color-primario);font-size:1em;box-shadow:0 2px 8px rgba(25,118,210,0.07);transition:border 0.18s, box-shadow 0.18s;" onchange="actualizarLeccionesDia(${d}, this.value)" placeholder="Lecciones" aria-label="Lecciones día ${d+1}">
+            </div>`;
             html += `<br><span style="font-size:11px;color:var(--color-error);font-weight:bold;">Ausentes: ${ausentesDia}</span>`;
-            html += `<br><button onclick="eliminarDia(${d})" class="btn-eliminar-dia" title="Eliminar este día" aria-label="Eliminar día">
-                <svg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><polyline points='3 6 5 6 21 6'/><path d='M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m5 0V4a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v2'/><line x1='10' y1='11' x2='10' y2='17'/><line x1='14' y1='11' x2='14' y2='17'/></svg>
-                Eliminar
-            </button></th>`;
+            html += `<br><button onclick="eliminarDia(${d})" class="btn-eliminar-dia" title="Eliminar este día" aria-label="Eliminar día" style="display:flex;align-items:center;gap:8px;padding:8px 22px;font-size:1.08em;font-weight:600;border-radius:10px;background:linear-gradient(90deg,#e74c3c 60%,#c0392b 100%);color:#fff;border:none;box-shadow:0 4px 16px rgba(231,76,60,0.13);transition:background 0.18s,box-shadow 0.18s,transform 0.18s;">
+                <svg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2.2' stroke-linecap='round' stroke-linejoin='round' style='vertical-align:middle;'><polyline points='3 6 5 6 21 6'/><path d='M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m5 0V4a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v2'/><line x1='10' y1='11' x2='10' y2='17'/><line x1='14' y1='11' x2='14' y2='17'/></svg>
+                Eliminar día
+            </button>`;
+            html += `</th>`;
         }
-        html += '</tr></thead><tbody>';
+        html += '</tr>';
+        // Eliminar botón '+ Día' fuera de contexto para evitar errores de renderizado
+        html += '<tbody>';
         // Separar estudiantes completos y vacíos
         const completos = estudiantes.filter(e => e.nombre && e.apellido1);
         const vacios = estudiantes.filter(e => !(e.nombre && e.apellido1));
@@ -987,6 +1040,16 @@ html += '<tr>' +
             dias.splice(idx, 1);
             estudiantes.forEach(est => {
                 est.asistenciaDias.splice(idx, 1);
+            });
+            // Ordenar días por fecha ascendente si tienen fecha válida
+            dias.sort((a, b) => {
+                if (!a.fecha) return 1;
+                if (!b.fecha) return -1;
+                return new Date(a.fecha) - new Date(b.fecha);
+            });
+            // Renombrar días consecutivamente
+            dias.forEach((dia, i) => {
+                dia.nombre = `Día ${i + 1}`;
             });
             guardarDatos();
             renderAsistencia();
@@ -1151,7 +1214,7 @@ if (!localStorage.getItem(STORAGE_KEY)) {
         const ws = XLSX.utils.aoa_to_sheet(ws_data);
         XLSX.utils.book_append_sheet(wb, ws, "Asistencia");
         XLSX.writeFile(wb, "Plantilla_Registro2025.xlsx");
-    }
+       }
 
     function cargarPlantilla(event) {
         const file = event.target.files[0];
@@ -1179,6 +1242,7 @@ if (!localStorage.getItem(STORAGE_KEY)) {
                 }
                 estudiantes.push({
                     cedula: row[0] || '',
+
                     nombre: row[1] || '',
                     apellido1: row[2] || '',
                     apellido2: row[3] || '',
