--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@ tbody tr td select {
     box-shadow: 0 2px 8px rgba(44,62,80,0.07) !important;
     border: 1.5px solid #bfc9d8 !important;
 }
+body.dark-mode td.sticky input,
+body.dark-mode td.sticky select,
+body.dark-mode tbody tr td input,
+body.dark-mode tbody tr td select {
+    background: rgba(44,62,80,0.18) !important;
+    color: #fff !important;
+    border: 2px solid #90caf9 !important;
+    box-shadow: 0 2px 8px rgba(44,62,80,0.18) !important;
+    transition: background 0.2s, color 0.2s, border 0.2s;
+}
+body.dark-mode tbody tr:nth-child(even) td input,
+body.dark-mode tbody tr:nth-child(even) td select {
+    background: #fff !important;
+    color: #263238 !important;
+    border: 2px solid #90caf9 !important;
+    box-shadow: 0 2px 8px rgba(44,62,80,0.18) !important;
+}
 #tooltipModoOscuro {
     display:none;
     position:absolute;
