--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <span>📝</span> Agregar estudiante
             </button>
             <button onclick="ordenarEstudiantesManual()" title="Ordena la lista de estudiantes por primer apellido" class="btn-agregar-est">
-                <span>🔤</span> <span>📋</span> Ordenar estudiantes
+                <span>🔤</span>  Ordenar estudiantes
             </button>
         </div>
     </div>
@@ -96,4 +96,6 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
+
+ 
