--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span>🗑️</span> Eliminar estudiante
             </button>
             <label for="alertaTempranaInput">% Alerta temprana:</label>
-            <input type="number" id="alertaTempranaInput" min="0" max="10" value="2" title="Porcentaje para activar alerta temprana">
+            <input type="number" id="alertaTempranaInput" min="0" max="10" value="2" step="1" title="Porcentaje para activar alerta temprana (0-10)">
         </div>
         <div class="actions-right">
             <button onclick="descargarPlantilla()" title="Descarga una plantilla de ejemplo en Excel">
