--- a/index.html
+++ b/index.html
@@ -86,6 +86,32 @@
 
     <div id="contadorEstudiantes"></div>
 
+    <!-- Tabla de referencia de porcentajes -->
+    <div class="tabla-referencia">
+        <h4>📊 Escala de Porcentaje de Asistencia</h4>
+        <table class="referencia-table">
+            <thead>
+                <tr>
+                    <th>Porcentaje injustificadas del total de lecciones</th>
+                    <th>Asignación de porcentaje</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>0% a menos de 1%</td><td>10%</td></tr>
+                <tr><td>1% a menos de 10%</td><td>9%</td></tr>
+                <tr><td>10% a menos de 20%</td><td>8%</td></tr>
+                <tr><td>20% a menos de 30%</td><td>7%</td></tr>
+                <tr><td>30% a menos de 40%</td><td>6%</td></tr>
+                <tr><td>40% a menos de 50%</td><td>5%</td></tr>
+                <tr><td>50% a menos de 60%</td><td>4%</td></tr>
+                <tr><td>60% a menos de 70%</td><td>3%</td></tr>
+                <tr><td>70% a menos de 80%</td><td>2%</td></tr>
+                <tr><td>80% a menos de 90%</td><td>1%</td></tr>
+                <tr><td>90% a 100%</td><td>0%</td></tr>
+            </tbody>
+        </table>
+    </div>
+
     <div class="table-container">
         <div class="table-wrapper">
             <div class="table-responsive">
