--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
     <!-- Sección de Evaluación de Pruebas -->
     <div class="evaluacion-container">
         <h3>📝 Evaluación de Pruebas</h3>
-        <div class="evaluacion-instructions">
-            <p><strong>💡 Instrucciones:</strong> SE EDITA SOLO LO QUE ESTA EN BLANCO. PUEDE CAMBIAR LOS PUNTOS DE CADA PRUEBA Y EL % DE PESO, LO DEMÁS SE HACE AUTOMÁTICO.</p>
-        </div>
+                        <div class="evaluacion-instructions">
+                    <p><strong>💡 Instrucciones:</strong> SE EDITA SOLO LO QUE ESTÁ EN BLANCO. PUEDE CAMBIAR LOS PUNTOS MÁXIMOS DE CADA PRUEBA Y EL % DE PESO, LO DEMÁS SE CALCULA AUTOMÁTICAMENTE.</p>
+                </div>
         
         <div class="evaluacion-actions">
             <button onclick="agregarPrueba()" class="btn-agregar-prueba">
