--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         
         <div class="trabajo-cotidiano-actions">
             <button onclick="agregarDiaTrabajo()" class="btn-agregar-dia-trabajo">
-                <span>📅</span> + Día
+                <span>📅</span> + Indicador
             </button>
             <button onclick="exportarTrabajoCotidiano()" class="btn-exportar-trabajo">
                 <span>📤</span> Exportar Trabajo Cotidiano
@@ -175,9 +175,9 @@
     <!-- Sección de Evaluación de Pruebas -->
     <div class="evaluacion-container">
         <h3>📝 Evaluación de Pruebas</h3>
-                        <div class="evaluacion-instructions">
-                    <p><strong>💡 Instrucciones:</strong> SE EDITA SOLO LO QUE ESTÁ EN BLANCO. PUEDE CAMBIAR LOS PUNTOS MÁXIMOS DE CADA PRUEBA Y EL % DE PESO, LO DEMÁS SE CALCULA AUTOMÁTICAMENTE.</p>
-                </div>
+        <div class="evaluacion-instructions">
+            <p><strong>💡 Instrucciones:</strong> SE EDITA SOLO LO QUE ESTÁ EN BLANCO. PUEDE CAMBIAR LOS PUNTOS MÁXIMOS DE CADA PRUEBA Y EL % DE PESO, LO DEMÁS SE CALCULA AUTOMÁTICAMENTE.</p>
+        </div>
         
         <div class="evaluacion-actions">
             <button onclick="agregarPrueba()" class="btn-agregar-prueba">
