--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <button onclick="scrollToSection('portafolio')" class="menu-btn portafolio-btn">
                 <span>📁</span> Portafolio
             </button>
+            <button onclick="mostrarResumenEvaluaciones()" class="menu-btn resumen-btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                <span>📋</span> Resumen Evaluaciones
+            </button>
         </div>
     </div>
 
