--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     
     <header>
-        <button id="btnModoOscuro" onclick="toggleModoOscuro()" title="Cambiar modo oscuro/claro">
+        <button id="btnModoOscuro" onclick="toggleModoOscuro()">
             🌙
         </button>
         <div id="tooltipModoOscuro">Modo oscuro</div>
